examples/001-hello-catz-httpd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-catz-pod
  labels:
    app: hello-catz
    service: httpd
spec:
  containers:
  - name: webserver
    image: xsgordon/python_httpd:v1
    ports:
    - containerPort: 8080
