examples/002-hello-catz-httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-catz-httpd
spec:
  type: NodePort
  selector:
      app: hello-catz
      service: httpd
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
