examples/008-hello-catz-imaged-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-catz-imaged-service
  labels:
    app: hello-catz
spec:
  type: ClusterIP
  selector:
      app: hello-catz
      service: imaged
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
