examples/003-hello-catz-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: hello-catz-route
spec:
  host: hello-catz-service-myproject.192.168.42.116.nip.io
  to:
    kind: Service
    name: hello-catz-service
